add floatingButton and write.xml,class

--- a/sejong_Alli/app/src/main/AndroidManifest.xml
+++ b/sejong_Alli/app/src/main/AndroidManifest.xml
@@ -20,6 +20,11 @@
         </activity>
         <activity android:name=".example.Details">
         </activity>
+
+        <activity
+            android:name=".WriteGroup">
+        </activity>
+
     </application>
 
 </manifest>
