Refactor inner class to outer class

--- a/sejong_Alli/app/src/main/AndroidManifest.xml
+++ b/sejong_Alli/app/src/main/AndroidManifest.xml
@@ -10,14 +10,14 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
-            android:name=".MainActivity"
+            android:name=".activity.MainActivity"
             android:label="@string/app_name"
             android:theme="@style/AppTheme.NoActionBar">
 
         </activity>
         <activity android:name=".Details"></activity>
         <activity android:name=".WriteGroup"></activity>
-        <activity android:name=".Splash">
+        <activity android:name=".activity.Splash">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
