--- a/sejong_Alli/app/src/main/AndroidManifest.xml
+++ b/sejong_Alli/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.eeww9.sejong_alli">
+    package="com.sejong.hungryduck.sejong">
     <uses-permission android:name="android.permission.INTERNET"/>
 
     <application
@@ -10,14 +10,14 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
-            android:name=".activity.MainActivity"
+            android:name="com.sejong.hungryduck.activity.MainActivity"
             android:label="@string/app_name"
             android:theme="@style/AppTheme.NoActionBar">
 
         </activity>
-        <activity android:name=".Details"></activity>
-        <activity android:name=".WriteGroup"></activity>
-        <activity android:name=".activity.Splash">
+        <activity android:name="com.sejong.hungryduck.Details"></activity>
+        <activity android:name="com.sejong.hungryduck.WriteGroup"></activity>
+        <activity android:name="com.sejong.hungryduck.activity.Splash">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
