--- a/sejong_Alli/app/src/main/AndroidManifest.xml
+++ b/sejong_Alli/app/src/main/AndroidManifest.xml
@@ -1,21 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.sejong.hungryduck.sejong">
-    <uses-permission android:name="android.permission.INTERNET"/>
+        package="com.sejong.hungryduck.sejong">
+
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
-        android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
-        android:label="@string/app_name"
-        android:supportsRtl="true"
-        android:theme="@style/AppTheme">
-        <activity
-            android:name="com.sejong.hungryduck.activity.MainActivity"
+            android:allowBackup="true"
+            android:icon="@mipmap/ic_launcher"
             android:label="@string/app_name"
-            android:theme="@style/AppTheme.NoActionBar">
+            android:supportsRtl="true"
+            android:theme="@style/AppTheme">
+        <activity
+                android:name="com.sejong.hungryduck.activity.MainActivity"
+                android:label="@string/app_name"
+                android:theme="@style/AppTheme.NoActionBar">
 
         </activity>
-        <activity android:name="com.sejong.hungryduck.Details"></activity>
+        <activity android:name="com.sejong.hungryduck.ListItemView"></activity>
         <activity android:name="com.sejong.hungryduck.WriteGroup"></activity>
         <activity android:name="com.sejong.hungryduck.activity.Splash">
             <intent-filter>
