--- a/sejong_Alli/app/src/main/AndroidManifest.xml
+++ b/sejong_Alli/app/src/main/AndroidManifest.xml
@@ -16,8 +16,8 @@
                 android:theme="@style/AppTheme.NoActionBar">
 
         </activity>
-        <activity android:name="com.sejong.hungryduck.PostingsListView"></activity>
-        <activity android:name="com.sejong.hungryduck.WriteGroup"></activity>
+        <activity android:name="com.sejong.hungryduck.activity.PostingsListView"></activity>
+        <activity android:name="com.sejong.hungryduck.activity.WriteGroup"></activity>
         <activity android:name="com.sejong.hungryduck.activity.Splash">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
