--- a/new-server/src/main/resources/application.properties
+++ b/new-server/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 #JPA
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create
 spring.jpa.generate-ddl=false
 spring.jpa.show-sql=true
 spring.jpa.database=mysql
