Add sample dml sql script
insert sample datas

--- a/.gitignore
+++ b/.gitignore
@@ -24,3 +24,5 @@ new-server/.mvn/wrapper/maven-wrapper.properties
 new-server/.idea/dataSources.xml
 
 new-server/hackathon.iml
+
+new-server/.idea/sqldialects.xml
