--- a/new-server/src/main/resources/application.properties
+++ b/new-server/src/main/resources/application.properties
@@ -5,6 +5,7 @@ spring.jpa.show-sql=true
 spring.jpa.database=mysql
 logging.level.org.hibernate=info
 #MYSQL
+spring.datasource.initialization-mode=always
 spring.datasource.url=jdbc:mysql://localhost:3306/notice?createDatabaseIfNotExist=true&useSSL=false&characterEncoding=UTF-8&serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=1234
