--- a/sejong_Alli/app/build.gradle
+++ b/sejong_Alli/app/build.gradle
@@ -32,4 +32,7 @@ dependencies {
     compile 'com.android.support:appcompat-v7:24.2.1'
     compile 'com.android.support:design:24.2.1'
     compile files('lib/jsoup-1.10.1.jar')
+    compile group: 'com.squareup.retrofit2', name: 'retrofit', version: '2.6.4'
+    compile group: 'com.google.code.gson', name: 'gson', version: '2.8.5'
+    compile group: 'com.squareup.retrofit2', name: 'converter-gson', version: '2.6.4'
 }
