--- a/sejong_Alli/app/src/main/AndroidManifest.xml
+++ b/sejong_Alli/app/src/main/AndroidManifest.xml
@@ -16,7 +16,7 @@
                 android:theme="@style/AppTheme.NoActionBar">
 
         </activity>
-        <activity android:name="com.sejong.hungryduck.activity.PostingsListView"></activity>
+        <activity android:name="com.sejong.hungryduck.activity.PostingView"></activity>
         <activity android:name="com.sejong.hungryduck.activity.WriteGroup"></activity>
         <activity android:name="com.sejong.hungryduck.activity.Splash">
             <intent-filter>
