--- a/sejong_Alli/app/build.gradle
+++ b/sejong_Alli/app/build.gradle
@@ -35,4 +35,5 @@ dependencies {
     compile group: 'com.squareup.retrofit2', name: 'retrofit', version: '2.6.4'
     compile group: 'com.google.code.gson', name: 'gson', version: '2.8.5'
     compile group: 'com.squareup.retrofit2', name: 'converter-gson', version: '2.6.4'
+    compile 'com.squareup.picasso:picasso:2.71828'
 }
