--- a/sejong_Alli/app/build.gradle
+++ b/sejong_Alli/app/build.gradle
@@ -10,9 +10,6 @@ android {
         targetSdkVersion 24
         versionCode 1
         versionName "1.0"
-        jackOptions {
-            enabled true
-        }
     }
     buildTypes {
         release {
@@ -27,13 +24,15 @@ android {
 }
 
 dependencies {
-    compile fileTree(include: ['*.jar'], dir: 'libs')
-    testCompile 'junit:junit:4.12'
-    compile 'com.android.support:appcompat-v7:24.2.1'
-    compile 'com.android.support:design:24.2.1'
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
+    testImplementation 'junit:junit:4.12'
+    //noinspection GradleCompatible
+    implementation 'com.android.support:appcompat-v7:24.2.1'
+    implementation 'com.android.support:design:24.2.1'
     compile files('lib/jsoup-1.10.1.jar')
-    compile group: 'com.squareup.retrofit2', name: 'retrofit', version: '2.6.4'
-    compile group: 'com.google.code.gson', name: 'gson', version: '2.8.5'
-    compile group: 'com.squareup.retrofit2', name: 'converter-gson', version: '2.6.4'
-    compile 'com.squareup.picasso:picasso:2.71828'
+    implementation group: 'com.squareup.retrofit2', name: 'retrofit', version: '2.6.4'
+    implementation group: 'com.google.code.gson', name: 'gson', version: '2.8.5'
+    implementation group: 'com.squareup.retrofit2', name: 'converter-gson', version: '2.6.4'
+    implementation 'com.squareup.picasso:picasso:2.71828'
+    implementation 'com.google.android.material:material:1.0.0'
 }
